# example-standalone-inferencing-zephyr

./: CMakeLists.txt  prj.conf  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
Kconfig/: Kconfig.modules  Kconfig.sysbuild.modules
include/: adBms6830CmdList.h  adBms6830Data.h  adBms6830GenericType.h  adBms6830ParseCreate.h  adBms_Application.h  adbms_main.h  common.h  current_sense_main.h  edge_impulse_data.h  mcuWrapper.h  serialPrintResult.h
src/: adBms6830GenericType.cpp  adBms6830ParseCreate.cpp  adBms_Application.cpp  adbms_main.cpp  current_sense_main.cpp  main.cpp  main.cpp.old  mcuWrapper.cpp  serialPrintResult.cpp
